# quantum-alu

./: .gitignore  README.md  binary_multiplication.ipynb  comparator.ipynb  full_adder.ipynb  full_subtractor.ipynb  half_adder.ipynb  multiplexer.ipynb  requirements.txt
.qiskit/: settings.ini
notebooks/: binary_multiplication.ipynb  comparator.ipynb  full_sub.ipynb  multiplexer.ipynb  mux.ipynb
py/: README.md  pyproject.toml  requirements.txt
py/src/: full_adder.py  half_adder.py
src/: bit_mul.py  cmp.ipynb  cmp.py  eq.py  full_add.ipynb  full_add.py  full_sub.ipynb  full_sub.py  gt.py  half_add.ipynb  half_add.py  lt.py  mul.ipynb  mux.ipynb  mux.py  shl.ipynb  shr.ipynb
